# pyobs-alpaca

./: .readthedocs.yml  README.md  pyproject.toml  setup.py
.github/workflows/: ruff.yml
docs/source/: conf.py  index.rst
pyobs_alpaca/: __init__.py  device.py  dome.py  focuser.py  telescope.py
