[tool.poetry]
name = "pyobs-alpaca"
version = "1.0.3"
description = "pyobs module for ASCOM Alpaca"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.25.1"
single-source = "^0.3.0"
pyobs-core="^1.4.5"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
sphinx = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']