[project]
name = "pyobs-alpaca"
version = "1.1.2"
description = "pyobs module for ASCOM Alpaca"
authors = [{ name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" }]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=2.2.5,<3",
    "pyobs-core>=1,<2",
]

[dependency-groups]
dev = [
    "black>=23.7.0,<24",
    "pre-commit>=3.3.3,<4",
    "flake8>=7.3.0",
    "sphinx>=7.1.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']
