[project]
name = "pyobs-alpaca"
version = "2.0.0.dev3"
description = "pyobs module for ASCOM Alpaca"
authors = [{ name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" }]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=2.2.5,<3",
    "pyobs-core>=2.0.0.dev1,<3",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "ruff>=0.9.0",
    "pyrefly>=1.1.1",
    "pre-commit>=4.2.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "G"]

[tool.pyrefly]
python-version = "3.11"
